# Blockchain_for_network_automation

./: IAT-Zwischenpraesentation-final.pptx  LICENSE  README.md
comm/: Anchor.toml  package-lock.json  package.json
comm/app/: bench.js  bench.ts  init-data-acc.js  init-data-acc.ts  listener.js  listener.ts  sensor-client.js  sensor-client.ts  set-bound.js  set-bound.ts  tsconfig.json
comm/programs/comm/: Cargo.toml
comm/programs/comm/src/: lib.rs
comm/tests/: comm.js  comm.ts
comm/wallets/: admin-keypair.json  data-acc.txt  sensor-keypair.json
python/: fake_sensor.py  requirements.txt.txt  sensor.py
