[package]
name = "comm"
version = "0.1.2"
description = "simple threshold monitoring created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "comm"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.0"
